--- a/client/angular.json
+++ b/client/angular.json
@@ -24,7 +24,12 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.css"],
+            "styles": [
+                "node_modules/bootstrap/dist/css/bootstrap.min.css",
+               "node_modules/font-awesome/css/font-awesome.css",
+                "node_modules/bootswatch/dist/united/bootstrap.min.css",
+                "src/styles.css"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -90,7 +95,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/font-awesome/css/font-awesome.min.css",
+             "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/bootswatch/dist/united/bootstrap.min.css",
               "src/styles.css"
             ],
