--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,10 @@
     }
   },
   "TokenKey": "super secret unguessable key super secret unguessable key super secret unguessable key",
+  "CloudinarySettings": {
+    "CloudName": "drw1mmaxk",
+    "ApiKey": "526373637533926",
+    "ApiSecret": "BlUZvkMu5FbkmDE2bfhISgOYaJ4"
+  },
   "AllowedHosts": "*"
 }
