--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=dating.db"
+    "DefaultConnection": "Server=localhost,1433;Database=DatingDB;User Id=AS;Password=Password@2;TrustServerCertificate=True"
   }
 }
