--- a/.github/workflows/main_dating-app-proj.yml
+++ b/.github/workflows/main_dating-app-proj.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install deps and build angular app
         run: |
           cd client
-          npm install
+          npm install --legacy-peer-deps
           ng build
 
       - name: Set up .NET Core
